Bug 1980074 - Remove obsolete --tab-overflow-pinned-tabs-width. r=desktop-theme-reviewers,emilio
Differential Revision: https://phabricator.services.mozilla.com/D259216

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -126,8 +126,6 @@
   flex: 1000 1000;
 
   &[orient="horizontal"] {
-    --tab-overflow-pinned-tabs-width: 0px;
-    padding-inline: var(--tab-overflow-pinned-tabs-width) 0;
     min-height: var(--tabstrip-min-height);
 
     --tab-min-width: 76px;
@@ -1881,7 +1879,7 @@ tab-group {
 :root:not([privatebrowsingmode]) :is(toolbarbutton, toolbarpaletteitem) ~ #tabbrowser-tabs,
 :root[privatebrowsingmode] :is(toolbarbutton:not(#firefox-view-button), toolbarpaletteitem:not(#wrapper-firefox-view-button)) ~ #tabbrowser-tabs {
   border-inline-start: var(--tabstrip-inner-border);
-  padding-inline-start: calc(var(--tab-overflow-pinned-tabs-width) + 2px);
+  padding-inline-start: 2px;
   margin-inline-start: 2px;
 }
 
